[gd_scene load_steps=6 format=1]

[ext_resource path="res://Scenes/rooms.gd" type="Script" id=1]
[ext_resource path="res://png/quadrato.png" type="Texture" id=2]
[ext_resource path="res://Font/linear.fnt" type="Font" id=3]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = 10.0
content_margin/right = -1.0
content_margin/top = 10.0
content_margin/bottom = -1.0
bg_color = Color( 0, 0, 0, 1 )
light_color = Color( 1, 1, 1, 1 )
dark_color = Color( 1, 1, 1, 1 )
border_size = 1
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
light_color = Color( 1, 1, 1, 1 )
dark_color = Color( 1, 1, 1, 1 )
border_size = 1
border_blend = true
draw_bg = true

[node name="Room" type="Node2D"]

script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"Script" }

[node name="pnlRoom" type="Patch9Frame" parent="."]

margin/left = 57.0
margin/top = 56.0
margin/right = 916.0
margin/bottom = 485.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
texture = ExtResource( 2 )
patch_margin/left = 5
patch_margin/top = 5
patch_margin/right = 5
patch_margin/bottom = 5

[node name="txtRoom" type="LineEdit" parent="pnlRoom"]

margin/left = 239.0
margin/top = 347.0
margin/right = 605.0
margin/bottom = 402.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = ""
max_length = 0
editable = true
secret = false

[node name="Label" type="Label" parent="pnlRoom"]

margin/left = 48.0
margin/top = 347.0
margin/right = 234.0
margin/bottom = 402.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 3 )
text = "room:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btnEnter" type="Button" parent="pnlRoom"]

margin/left = 628.0
margin/top = 352.0
margin/right = 839.0
margin/bottom = 396.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
text = "enter"
flat = false

[node name="btnExit" type="Button" parent="pnlRoom"]

margin/left = 816.0
margin/top = -20.0
margin/right = 870.0
margin/bottom = 24.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
text = "X"
flat = true

[node name="roomList" type="ItemList" parent="pnlRoom"]

margin/left = 43.0
margin/top = 35.0
margin/right = 823.0
margin/bottom = 303.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 3 )


